@@ -2,7 +2,9 @@
 <html lang="en">
 
 	<head>
-    <base href="/">
+    <% if (defined(my $base = exists stash->{'base'} ? stash->{'base'} : '/')) { %>
+    <base href="<%= $base %>">
+    <% } %>
 		<meta charset="utf-8">
 
     <title><%= title %></title>
